--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
         <div class="upbar"><h2>console</h2></div>
         <div class="cconsole">
             <div class="console-out">
-                <div class="console-text" id="console-text">
-
-                </div>
-                <input type="text" class="console-in" id="console-in">
+                <div class="console-text" id="console-text"></div>
+                <span class="console-prefix">Thijmen@web:~:</span>
+                <input type="text" class="console-in" id="console-in" autofocus>
             </div>
-
         </div>
     </div>
 </div>
