--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             </div>
         </div>
     </div>
+    <div id="meerScreen" class="meer-screen" style="display:none;">
+        <div class="meer-content"></div>
+    </div>
 </div>
+
 <script src="main.js"></script>
 
 </body>
