--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="meerScreen" class="meer-screen" style="display:none;">
         <div class="meer-content"></div>
     </div>
+    <div class="help"></div>
 </div>
 
 <script src="main.js"></script>
