--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <div class="container ">
     <div>
         <h1>Thijmen's console</h1>
+        <div>
+            <p class="texst-c">De doelmatigheid meter</p>
+            <p class="texst-c">0.01;1</p>
+        </div>
     </div>
     <div class="console">
         <div class="upbar"><h2>console</h2></div>
@@ -25,8 +29,10 @@
     </div>
     <div id="meerScreen" class="meer-screen" style="display:none;">
         <div class="meer-content"></div>
+
     </div>
     <div class="help"></div>
+
 </div>
 
 <script src="main.js"></script>
