--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Thijmen's console</h1>
         <div>
             <p class="texst-c">De doelmatigheid meter</p>
-            <p class="texst-c">0.01;1</p>
+            <p class="texst-c">0.01:1</p>
         </div>
     </div>
     <div class="console">
