--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <div class="help"></div>
 
 </div>
-
+<footer class="footer">
+    <p>Voor vragen opmerkingen en meer informatie bij keuzes op deze website stuur dan een e-mail naar <a href="mailto:b136117@atlascollege.nl"> mijn e-mail</a>
+    </p>
+</footer>
 <script src="main.js"></script>
 
 </body>
