robots.txt en wat meta tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portfolio | Thijmen</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!--Meta teags-->
+    <meta name="language" content="nl">
+    <meta name="author" content="Thijmen">
+    <meta name="description" content="De website van Thijmen">
+    <meta name="keywords" content="Thijmen, website, portfolio">
+    <meta name="reply-to" content="b136117@atlascollege.nl">
 </head>
 <body>
 <div class="container ">
